# cliai

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
src/: app.py
src/utils/: openRouterClient.py  processCommand.py  runCommand.py  userCLI.py
termate/: app.py
termate/utils/: openRouterClient.py  processCommand.py  runCommand.py  userCLI.py
